--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <body>
 <div id="layout-content">
 <div id="toptitle">
-<h1>Jianwang Zhai</h1>
+<h1>Feng Guo</h1>
 </div>
 <table class="imgtable"><tr><td>
-<img src="zhaijianwang.jpg" alt="150" width="150px" height="Jianwang Zhai" />&nbsp;</td>
+<img src="guofeng.jpg" alt="150" width="150px" height="Feng Guo" />&nbsp;</td>
 <td align="left"><p>Jianwang Zhai, Ph.D., Assistant Professor <br />
 <a href="https://ic.bupt.edu.cn/">School of Integrated Circuits</a> <br />
 <a href="https://www.bupt.edu.cn/">Beijing University of Posts and Telecommunications</a> <br />
@@ -23,7 +23,7 @@ Office: Room 111, Scientific-Research Building <br />
 Email: zhaijw@bupt.edu.cn<br /></p>
 </td></tr></table>
 <h2>BIOGRAPHY</h2>
-<p>I am Jianwang Zhai (翟建旺 in Chinese), currently an assistant professor at <a href="https://www.bupt.edu.cn/">Beijing University of Posts and Telecommunications (BUPT)</a>. 
+<p>I am Feng Guo (郭枫 in Chinese), currently an assistant professor at <a href="https://www.bupt.edu.cn/">Beijing University of Posts and Telecommunications (BUPT)</a>. 
 Prior to that, I got my Ph.D. in Computer Science and Technology from <a href="https://www.tsinghua.edu.cn/">Tsinghua University (THU)</a> in 2023, and received my B.Eng. from <a href="https://www.bjtu.edu.cn/">Beijing Jiaotong University (BJTU)</a> in 2018.</p>
 <p>My research interests include machine learning and optimization methods with applications in EDA, especially power modeling, design space exploration, and physical design.</p>
 <h2>RESEARCH INTERESTS</h2>
