--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="jemdoc.css" type="text/css" />
 <link rel="stylesheet" href="jemdoc.css" type="text/css" />
 <link rel="stylesheet" href="middle-layout.css" type="text/css" />
-<title>Jianwang Zhai</title>
+<title>Feng Guo</title>
 </head>
 <body>
 <div id="layout-content">
@@ -20,7 +20,7 @@
 <a href="https://ic.bupt.edu.cn/">School of Integrated Circuits</a> <br />
 <a href="https://www.bupt.edu.cn/">Beijing University of Posts and Telecommunications</a> <br />
 Office: Room 111, Scientific-Research Building <br />
-Email: zhaijw@bupt.edu.cn<br /></p>
+Email: guofeng@bupt.edu.cn<br /></p>
 </td></tr></table>
 <h2>BIOGRAPHY</h2>
 <p>I am Feng Guo (郭枫 in Chinese), currently an assistant professor at <a href="https://www.bupt.edu.cn/">Beijing University of Posts and Telecommunications (BUPT)</a>. 
