--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 </div>
 <table class="imgtable"><tr><td>
 <img src="guofeng.jpg" alt="150" width="150px" height="Feng Guo" />&nbsp;</td>
-<td align="left"><p>Jianwang Zhai, Ph.D., Assistant Professor <br />
-<a href="https://ic.bupt.edu.cn/">School of Integrated Circuits</a> <br />
+<td align="left"><p>Feng Guo, Ph.D., Assistant Professor <br />
+<a href="https://ic.bupt.edu.cn/">School of Computer Science (National Pilot Software Engineering School)</a> <br />
 <a href="https://www.bupt.edu.cn/">Beijing University of Posts and Telecommunications</a> <br />
 Office: Room 111, Scientific-Research Building <br />
 Email: guofeng@bupt.edu.cn<br /></p>
@@ -48,15 +48,11 @@ Prior to that, I got my Ph.D. in Computer Science and Technology from <a href="h
 <p>* denotes equal contribution, # denotes corresponding author.</p>
 <h3>Conference Papers</h3>
 <ul>
-<li><p>[C12] Zirui Li*, Kanglin Tian*, <b>Jianwang Zhai#</b>, Zixuan Li, Shixiong Kai, Siyuan Xu, Bei Yu, Kang Zhao, &ldquo;FTAFP: A Feedthrough-Aware Floorplanner for Hierarchical Design of Large-Scale SoCs&rdquo;, IEEE/ACM Asian and South Pacific Design Automation Conference (<b>ASP-DAC</b>), Tokyo, Jan. 20-23, 2025.</p>
+<li><p>[C2] Feng Guo, <b>Jianwang Zhai#</b>, Jingyu Jia, Jiawei Liu, Kang Zhao, Bei Yu, Chuan Shi#, &ldquo;IR-Fusion: A Fusion Framework for Static IR Drop Analysis Combining Numerical Solution and Machine Learning&rdquo;, IEEE/ACM Proceedings Design, Automation and Test in Europe (<b>DATE</b>), Lyon, France, Mar. 31–Apr. 02, 2025.</p>
 </li>
-<li><p>[C11] Guande Dong*, <b>Jianwang Zhai*#</b>, Hongtao Cheng, Xiao Yang, Chuan Shi, Kang Zhao#, &ldquo;PIRLLS: Pretraining with Imitation and RL Finetuning for Logic Synthesis&rdquo;, IEEE/ACM Asian and South Pacific Design Automation Conference (<b>ASP-DAC</b>), Tokyo, Jan. 20-23, 2025.</p>
+<li><p>[C1] Feng Guo*, Jiawei Liu*, <b>Jianwang Zhai#</b>, Jingyu Jia, Kang Zhao, Chuan Shi#, &ldquo;PGAU: Static IR Drop Analysis for Power Grid using Attention U-Net Architecture and Label Distribution Smoothing&rdquo;, ACM Great Lakes Symposium on VLSI (<b>GLSVLSI</b>), FL, USA, Jun. 12-14, 2024.</p>
 </li>
-<li><p>[C10] Jiawei Liu, <b>Jianwang Zhai#</b>, Mingyu Zhao, Zhe Lin, Bei Yu, Chuan Shi#, &ldquo;PolarGate: Breaking the Functionality Representation Bottleneck of And-Inverter Graph Neural Network&rdquo;, IEEE/ACM International Conference on Computer-Aided Design (<b>ICCAD</b>), New Jersey, Oct. 27-31, 2024.</p>
-</li>
-<li><p>[C9] Feng Guo*, Jiawei Liu*, <b>Jianwang Zhai#</b>, Jingyu Jia, Kang Zhao, Chuan Shi#, &ldquo;PGAU: Static IR Drop Analysis for Power Grid using Attention U-Net Architecture and Label Distribution Smoothing&rdquo;, ACM Great Lakes Symposium on VLSI (<b>GLSVLSI</b>), FL, USA, Jun. 12-14, 2024.</p>
-</li>
-<li><p>[C8] Zirui Li, <b>Jianwang Zhai#</b>, Zixuan Li, Zhongdong Qi, Kang Zhao, &ldquo;Effective Resource Model and Cost Scheme for Maze Routing in 3D Global Routing&rdquo;, IEEE International Symposium on Circuits and Systems (<b>ISCAS</b>), Singapore, May. 19-22, 2024.</p>
+<!-- <li><p>[C8] Zirui Li, <b>Jianwang Zhai#</b>, Zixuan Li, Zhongdong Qi, Kang Zhao, &ldquo;Effective Resource Model and Cost Scheme for Maze Routing in 3D Global Routing&rdquo;, IEEE International Symposium on Circuits and Systems (<b>ISCAS</b>), Singapore, May. 19-22, 2024.</p>
 </li>
 <li><p>[C7] Renjing Hou, <b>Jianwang Zhai</b>, Yajun Wang, Zhe Lin, Kang Zhao, &ldquo;Array Partitioning Method for Streaming Dataflow Optimization in High-level Synthesis&rdquo;, International Symposium of Electronics Design Automation (<b>ISEDA</b>), Xi'an, China, May. 10-13, 2024.</p>
 </li>
@@ -71,9 +67,9 @@ Prior to that, I got my Ph.D. in Computer Science and Technology from <a href="h
 <li><p>[C2] <b>Jianwang Zhai</b>, Chen Bai, Binwu Zhu, Yici Cai, Qiang Zhou, Bei Yu, &ldquo;McPAT-Calib: A Microarchitecture Power Modeling Framework for Modern CPUs&rdquo;, IEEE/ACM International Conference on Computer-Aided Design (<b>ICCAD</b>), Nov. 01-04, 2021.</p>
 </li>
 <li><p>[C1] Chen Bai, Qi Sun, <b>Jianwang Zhai</b>, Yuzhe Ma, Bei Yu, Martin D.F. Wong, &ldquo;BOOM-Explorer: RISC-V BOOM Microarchitecture Design Space Exploration Framework&rdquo;, IEEE/ACM International Conference on Computer-Aided Design (<b>ICCAD</b>), Nov. 01-04, 2021. <font color=red size=+0.5><b>(William J. McCalla Best Paper Award)</b></font></p>
-</li>
+</li> -->
 </ul>
-<h3>Journal Papers</h3>
+<!-- <h3>Journal Papers</h3>
 <ul>
 <li><p>[J5] <b>Jianwang Zhai</b>, Zichao Ling, Chen Bai, Kang Zhao, Bei Yu, &ldquo;Machine Learning for Microarchitecture Power Modeling and Design Space Exploration: A Survey &rdquo;, Journal of Computer Research and Development (<b>J-CRAD</b>), vol. 61, no. 06, pp. 1-19, 2024. (in Chinese)</p>
 </li>
@@ -84,11 +80,11 @@ Prior to that, I got my Ph.D. in Computer Science and Technology from <a href="h
 <li><p>[J2] <b>Jianwang Zhai</b>, Chen Bai, Binwu Zhu, Yici Cai, Qiang Zhou, Bei Yu, &ldquo;McPAT-Calib: A RISC-V BOOM Microarchitecture Power Modeling Framework&rdquo;, IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems (<b>TCAD</b>), vol. 42, no. 01, pp. 243-256, 2023.</p>
 </li>
 <li><p>[J1] <b>Jianwang Zhai</b>, Yici Cai, Qiang Zhou, &ldquo;Placement and Routing Methods Considering Shape Constraints of JTL for RSFQ Circuits&rdquo;, IEEE Transactions on Circuits and Systems II: Express Briefs (<b>TCAS-II</b>), vol. 68, no. 5, pp. 1571-1575, 2021.</p>
-</li>
+</li> -->
 </ul>
 <h2>SELECTED AWARDS</h2>
 <ul>
-<li><p>Best Paper Award Nomination, ASP-DAC, 2023</p>
+<!-- <li><p>Best Paper Award Nomination, ASP-DAC, 2023</p>
 </li>
 <li><p>William J. McCalla Best Paper Award, ICCAD, 2021</p>
 </li>
@@ -109,12 +105,12 @@ Prior to that, I got my Ph.D. in Computer Science and Technology from <a href="h
 <li><p>National Scholarship, Ministry of Education of China, 2016.</p>
 </li>
 <li><p>National Encouragement Scholarship, Ministry of Education of China, 2015.</p>
-</li>
+</li> -->
 </ul>
 <h2>SERVICES</h2>
 <h3>Journal Reviewer</h3>
 <ul>
-<li><p><a href="https://ieee-ceda.org/publication/ieee-transactions-computer-aided-design-integrated-circuits-systems-tcad/">IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems</a> (TCAD)</p>
+<!-- <li><p><a href="https://ieee-ceda.org/publication/ieee-transactions-computer-aided-design-integrated-circuits-systems-tcad/">IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems</a> (TCAD)</p>
 </li>
 <li><p><a href="https://tvlsi.ieee.org/">IEEE Transactions On Very Large Scale Integration (VLSI) Systems</a> (TVLSI)</p>
 </li>
@@ -140,7 +136,7 @@ Prior to that, I got my Ph.D. in Computer Science and Technology from <a href="h
 <li><p><a href="https://www.aspdac.com/">ACM/IEEE Asia and South Pacific Design Automation Conference</a> (ASP-DAC)</p>
 </li>
 <li><p><a href="https://www.eda2.com/iseda/">International Symposium of Electronics Design Automation</a> (ISEDA)</p>
-</li>
+</li> -->
 </ul>
 </div>
 </body>
