--- a/index.html
+++ b/index.html
@@ -39,18 +39,20 @@ Prior to that, I got my Ph.D. in Computer Science and Technology from <a href="h
 </ul>
 <h2>EDUCATION</h2>
 <ul>
-<li><p>Ph.D. Computer Science and Technology, <a href="https://www.tsinghua.edu.cn">Tsinghua University</a>, Sep. 2018 - Jun. 2023</p>
+<li><p>Ph.D. Computer Science and Technology, <a href="https://www.bupt.edu.cn">Beijing University of Posts and Telecommunications</a>, Sep. 2024 - nowaday</p>
 </li>
-<li><p>B.E.  Communication Engineering, <a href="https://www.bjtu.edu.cn/">Beijing Jiaotong University</a>, Sep. 2014 - Jun. 2018</p>
+<li><p>B.E.  Computer Science and Technology, <a href="https://www.bjut.edu.cn/">Beijing University of Technology</a>, Sep. 2020 - Jun. 2024</p>
 </li>
 </ul>
 <h2>PUBLICATIONS</h2>
 <p>* denotes equal contribution, # denotes corresponding author.</p>
 <h3>Conference Papers</h3>
 <ul>
-<li><p>[C2] Feng Guo, <b>Jianwang Zhai#</b>, Jingyu Jia, Jiawei Liu, Kang Zhao, Bei Yu, Chuan Shi#, &ldquo;IR-Fusion: A Fusion Framework for Static IR Drop Analysis Combining Numerical Solution and Machine Learning&rdquo;, IEEE/ACM Proceedings Design, Automation and Test in Europe (<b>DATE</b>), Lyon, France, Mar. 31–Apr. 02, 2025.</p>
+<li><p>[C2] <b>Feng Guo</b>, Jianwang Zhai#, Jingyu Jia, Jiawei Liu, Kang Zhao, Bei Yu, Chuan Shi#, &ldquo;IR-Fusion: A Fusion Framework for Static IR Drop Analysis Combining Numerical Solution and Machine Learning&rdquo;, IEEE/ACM Proceedings Design, Automation and Test in Europe (<b>DATE</b>), Lyon, France, Mar. 31–Apr. 02, 2025.</p>
 </li>
-<li><p>[C1] Feng Guo*, Jiawei Liu*, <b>Jianwang Zhai#</b>, Jingyu Jia, Kang Zhao, Chuan Shi#, &ldquo;PGAU: Static IR Drop Analysis for Power Grid using Attention U-Net Architecture and Label Distribution Smoothing&rdquo;, ACM Great Lakes Symposium on VLSI (<b>GLSVLSI</b>), FL, USA, Jun. 12-14, 2024.</p>
+<li><p>[C1] <b>Feng Guo</b>*, Jiawei Liu*, Jianwang Zhai#, Jingyu Jia, Kang Zhao, Chuan Shi#, &ldquo;PGAU: Static IR Drop Analysis for Power Grid using Attention U-Net Architecture and Label Distribution Smoothing&rdquo;, ACM Great Lakes Symposium on VLSI (<b>GLSVLSI</b>), FL, USA, Jun. 12-14, 2024.</p>
+</li>
+<li><p>[C1] Xiao Zhang#, <b>Feng Guo</b>, Jinlian Du, Xueyun Jin &ldquo;Photoplethysmogram Based Cognitive Load Recognition Using Lstm&rdquo;, ACM International Conference on Bioinformatics and Biomedical Technology (<b>ICBBT</b>), Xi'an, China, May. 24-26, 2023.</p>
 </li>
 <!-- <li><p>[C8] Zirui Li, <b>Jianwang Zhai#</b>, Zixuan Li, Zhongdong Qi, Kang Zhao, &ldquo;Effective Resource Model and Cost Scheme for Maze Routing in 3D Global Routing&rdquo;, IEEE International Symposium on Circuits and Systems (<b>ISCAS</b>), Singapore, May. 19-22, 2024.</p>
 </li>
