--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
 </div>
 <table class="imgtable"><tr><td>
 <img src="guofeng.jpg" alt="150" width="150px" height="Feng Guo" />&nbsp;</td>
-<td align="left"><p>Feng Guo, Ph.D., Assistant Professor <br />
+<td align="left"><p>Feng Guo, M.Sc. Student <br />
 <a href="https://ic.bupt.edu.cn/">School of Computer Science (National Pilot Software Engineering School)</a> <br />
 <a href="https://www.bupt.edu.cn/">Beijing University of Posts and Telecommunications</a> <br />
-Office: Room 111, Scientific-Research Building <br />
+Office: Room 616, No. 3 Teaching building <br />
 Email: guofeng@bupt.edu.cn<br /></p>
 </td></tr></table>
 <h2>BIOGRAPHY</h2>
-<p>I am Feng Guo (郭枫 in Chinese), currently an assistant professor at <a href="https://www.bupt.edu.cn/">Beijing University of Posts and Telecommunications (BUPT)</a>. 
-Prior to that, I got my Ph.D. in Computer Science and Technology from <a href="https://www.tsinghua.edu.cn/">Tsinghua University (THU)</a> in 2023, and received my B.Eng. from <a href="https://www.bjtu.edu.cn/">Beijing Jiaotong University (BJTU)</a> in 2018.</p>
-<p>My research interests include machine learning and optimization methods with applications in EDA, especially power modeling, design space exploration, and physical design.</p>
+<p>I am Feng Guo (郭枫 in Chinese), M.Sc. Student at <a href="https://www.bupt.edu.cn/">Beijing University of Posts and Telecommunications (BUPT), under the supervision of Prof. Chuan Shi since Fall 2024.</a>. 
+Prior to that, I got my B.Sc. in Computer Science and Technology from <a href="https://www.bjut.edu.cn/">Beijing University of Technology (BJUT)</a> in 2024.</p>
+<p>My research interests include machine learning and optimization methods with applications in EDA, especially power modeling, design space exploration, and physical design. Also, my research includes data mining and graph neural network</p>
 <h2>RESEARCH INTERESTS</h2>
 <ul>
 <li><p>Machine Learning for EDA</p>
@@ -36,12 +36,16 @@ Prior to that, I got my Ph.D. in Computer Science and Technology from <a href="h
 </li>
 <li><p>Physical Design</p>
 </li>
+<li><p>Data Mining</p>
+</li>
+<li><p>Graph Neural Network</p>
+</li>
 </ul>
 <h2>EDUCATION</h2>
 <ul>
-<li><p>Ph.D. Computer Science and Technology, <a href="https://www.bupt.edu.cn">Beijing University of Posts and Telecommunications</a>, Sep. 2024 - nowaday</p>
+<li><p>M.Sc. Computer Science and Technology, <a href="https://www.bupt.edu.cn">Beijing University of Posts and Telecommunications</a>, Sep. 2024 - Jun. 2027</p>
 </li>
-<li><p>B.E.  Computer Science and Technology, <a href="https://www.bjut.edu.cn/">Beijing University of Technology</a>, Sep. 2020 - Jun. 2024</p>
+<li><p>B.Sc.  Computer Science and Technology, <a href="https://www.bjut.edu.cn/">Beijing University of Technology</a>, Sep. 2020 - Jun. 2024</p>
 </li>
 </ul>
 <h2>PUBLICATIONS</h2>
@@ -109,9 +113,9 @@ Prior to that, I got my Ph.D. in Computer Science and Technology from <a href="h
 <li><p>National Encouragement Scholarship, Ministry of Education of China, 2015.</p>
 </li> -->
 </ul>
-<h2>SERVICES</h2>
+<!-- <h2>SERVICES</h2>
 <h3>Journal Reviewer</h3>
-<ul>
+<ul> -->
 <!-- <li><p><a href="https://ieee-ceda.org/publication/ieee-transactions-computer-aided-design-integrated-circuits-systems-tcad/">IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems</a> (TCAD)</p>
 </li>
 <li><p><a href="https://tvlsi.ieee.org/">IEEE Transactions On Very Large Scale Integration (VLSI) Systems</a> (TVLSI)</p>
