--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
 </div>
 <table class="imgtable"><tr><td>
 <img src="guofeng.jpg" alt="150" width="150px" height="Feng Guo" />&nbsp;</td>
-<td align="left"><p>Feng Guo, M.Sc. Student <br />
+<td align="left"><p>Feng Guo, M.Eng. Student <br />
 <a href="https://ic.bupt.edu.cn/">School of Computer Science (National Pilot Software Engineering School)</a> <br />
 <a href="https://www.bupt.edu.cn/">Beijing University of Posts and Telecommunications</a> <br />
 Office: Room 616, No. 3 Teaching building <br />
 Email: guofeng@bupt.edu.cn<br /></p>
 </td></tr></table>
 <h2>BIOGRAPHY</h2>
-<p>I am Feng Guo (郭枫 in Chinese), M.Sc. Student at <a href="https://www.bupt.edu.cn/">Beijing University of Posts and Telecommunications (BUPT), under the supervision of Prof. Chuan Shi since Fall 2024.</a>. 
-Prior to that, I got my B.Sc. in Computer Science and Technology from <a href="https://www.bjut.edu.cn/">Beijing University of Technology (BJUT)</a> in 2024.</p>
+<p>I am Feng Guo (郭枫 in Chinese), M.Eng. Student at <a href="https://www.bupt.edu.cn/">Beijing University of Posts and Telecommunications (BUPT)</a>, under the supervision of <a href="http://www.shichuan.org">Prof. Chuan Shi</a> since Fall 2024.. 
+Prior to that, I got my B.Eng. in Computer Science and Technology from <a href="https://www.bjut.edu.cn/">Beijing University of Technology (BJUT)</a> in 2024.</p>
 <p>My research interests include machine learning and optimization methods with applications in EDA, especially power modeling, design space exploration, and physical design. Also, my research includes data mining and graph neural network</p>
 <h2>RESEARCH INTERESTS</h2>
 <ul>
@@ -43,9 +43,9 @@ Prior to that, I got my B.Sc. in Computer Science and Technology from <a href="h
 </ul>
 <h2>EDUCATION</h2>
 <ul>
-<li><p>M.Sc. Computer Science and Technology, <a href="https://www.bupt.edu.cn">Beijing University of Posts and Telecommunications</a>, Sep. 2024 - Jun. 2027</p>
+<li><p>M.Eng. Computer Science and Technology, <a href="https://www.bupt.edu.cn">Beijing University of Posts and Telecommunications</a>, Sep. 2024 - Present</p>
 </li>
-<li><p>B.Sc.  Computer Science and Technology, <a href="https://www.bjut.edu.cn/">Beijing University of Technology</a>, Sep. 2020 - Jun. 2024</p>
+<li><p>B.Eng.  Computer Science and Technology, <a href="https://www.bjut.edu.cn/">Beijing University of Technology</a>, Sep. 2020 - Jun. 2024</p>
 </li>
 </ul>
 <h2>PUBLICATIONS</h2>
@@ -90,23 +90,41 @@ Prior to that, I got my B.Sc. in Computer Science and Technology from <a href="h
 </ul>
 <h2>SELECTED AWARDS</h2>
 <ul>
-<!-- <li><p>Best Paper Award Nomination, ASP-DAC, 2023</p>
+<li><p>Outstanding Graduate, The Education Committee of Beijing, 2024.</p>
 </li>
-<li><p>William J. McCalla Best Paper Award, ICCAD, 2021</p>
+<li><p>Excellent Student, The Education Committee of Beijing, 2023.</p>
 </li>
-<li><p>Huawei Scholarship, Tsinghua University, 2022.</p>
+<li><p>第五届集成电路EDA设计精英挑战赛总决赛一等奖、行芯企业特别奖, 2023.12</p>
 </li>
-<li><p>Longfor Scholarship, Tsinghua University, 2022.</p>
+<li><p>国家实用新型专利一项（学生一作）, 2023</p>
 </li>
-<li><p>Comprehensive Excellent Scholarship, Tsinghua University, 2020 &amp; 2021.</p>
+<li><p>华为ICT大赛2022-2023全球总决赛一等奖, 2023</p>
 </li>
-<li><p>Outstanding Graduate, The Education Committee of Beijing, 2018.</p>
+<li><p>2023 年“挑战杯”首都大学生课外学术科技作品竞赛北京市一等奖, 2023</p>
 </li>
-<li><p>May 4th Medal, Beijing Jiaotong University, 2018.</p>
+<li><p>第四届全国科学实验展演汇演三等奖 2023</p>
 </li>
-<li><p>Excellent Student, The Education Committee of Beijing, 2017.</p>
+<li><p>全国大学生数学建模竞赛北京市二等奖, 2022</p>
 </li>
-<li><p>Baosteel Scholarship, Baosteel Education Foundation, 2017.</p>
+<li><p>第十届“大唐杯”全国大学生移动通信5G技术大赛北京市三等奖, 2022</p>
+</li>
+<li><p>第七、八、九届“互联网+”大学生创新创业大赛北京赛区三等奖, 2022</p>
+</li>
+<li><p>Huawei Scholarship, Beijing University of Technology, 2022、2023.2023年华为“智能基座”未来之星特等奖（北京工业大学华为奖学金）</p>
+</li>
+<li><p>2022年中国国际服务贸易交易会优秀志愿者</p>
+</li>
+<li><p>2022年北京工业大学“三力先锋（个人）”</p>
+</li>
+<li><p>2022年信息学部疫情阻击战先进个人</p>
+</li>
+<li><p>2024年北京工业大学百佳毕业生</p>
+</li>
+<li><p>多次北京工业大学学习优秀奖、优秀学生干部、创新创业奖、三好学生</p>
+</li>
+<li><p>北京工业大学 2022-2023 学年“科技之星”</p>
+</li>
+<!-- <li><p>Baosteel Scholarship, Baosteel Education Foundation, 2017.</p>
 </li>
 <li><p>National Scholarship, Ministry of Education of China, 2016.</p>
 </li>
