--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@
 <link rel="stylesheet" href="jemdoc.css" type="text/css" />
 <link rel="stylesheet" href="jemdoc.css" type="text/css" />
 <link rel="stylesheet" href="middle-layout.css" type="text/css" />
-<title>Feng Guo</title>
+<title>Huabin Sun</title>
 </head>
 <body>
 <div id="layout-content">
 <div id="toptitle">
-<h1>Feng Guo</h1>
+<h1>Huabin Sun</h1>
 </div>
 <table class="imgtable"><tr><td>
-<img src="guofeng.jpg" alt="150" width="150px" height="Feng Guo" />&nbsp;</td>
-<td align="left"><p>Feng Guo, M.Eng. Student <br />
+<img src="guofeng.jpg" alt="150" width="150px" height="Huabin Sun" />&nbsp;</td>
+<td align="left"><p>Huabin Sun, M.Eng. Student <br />
 <a href="https://ic.bupt.edu.cn/">School of Computer Science (National Pilot Software Engineering School)</a> <br />
 <a href="https://www.bupt.edu.cn/">Beijing University of Posts and Telecommunications</a> <br />
 Office: Room 616, No. 3 Teaching building <br />
-Email: guofeng@bupt.edu.cn<br /></p>
+Email: sunhuabin@bupt.edu.cn<br /></p>
 </td></tr></table>
 <h2>BIOGRAPHY</h2>
 <p>I am Feng Guo (郭枫 in Chinese), M.Eng. Student at <a href="https://www.bupt.edu.cn/">Beijing University of Posts and Telecommunications (BUPT)</a>, under the supervision of <a href="http://www.shichuan.org">Prof. Chuan Shi</a> since Fall 2024.. 
