--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
 <h1>Huabin Sun</h1>
 </div>
 <table class="imgtable"><tr><td>
-<img src="guofeng.jpg" alt="150" width="150px" height="Huabin Sun" />&nbsp;</td>
+<!-- <img src="guofeng.jpg" alt="150" width="150px" height="Huabin Sun" />&nbsp;</td> -->
 <td align="left"><p>Huabin Sun, M.Eng. Student <br />
 <a href="https://ic.bupt.edu.cn/">School of Computer Science (National Pilot Software Engineering School)</a> <br />
-<a href="https://www.bupt.edu.cn/">Beijing University of Posts and Telecommunications</a> <br />
-Office: Room 616, No. 3 Teaching building <br />
+<!-- <a href="https://www.bupt.edu.cn/">Beijing University of Posts and Telecommunications</a> <br />
+Office: Room 616, No. 3 Teaching building <br /> -->
 Email: sunhuabin@bupt.edu.cn<br /></p>
 </td></tr></table>
 <h2>BIOGRAPHY</h2>
-<p>I am Feng Guo (郭枫 in Chinese), M.Eng. Student at <a href="https://www.bupt.edu.cn/">Beijing University of Posts and Telecommunications (BUPT)</a>, under the supervision of <a href="http://www.shichuan.org">Prof. Chuan Shi</a> since Fall 2024.. 
+<!-- <p>I am Feng Guo (郭枫 in Chinese), M.Eng. Student at <a href="https://www.bupt.edu.cn/">Beijing University of Posts and Telecommunications (BUPT)</a>, under the supervision of <a href="http://www.shichuan.org">Prof. Chuan Shi</a> since Fall 2024.. 
 Prior to that, I got my B.Eng. in Computer Science and Technology from <a href="https://www.bjut.edu.cn/">Beijing University of Technology (BJUT)</a> in 2024.</p>
-<p>My research interests include machine learning and optimization methods with applications in EDA, especially power modeling, design space exploration, and physical design. Also, my research includes data mining and graph neural network</p>
+<p>My research interests include machine learning and optimization methods with applications in EDA, especially power modeling, design space exploration, and physical design. Also, my research includes data mining and graph neural network</p> -->
 <h2>RESEARCH INTERESTS</h2>
 <ul>
 <li><p>Machine Learning for EDA</p>
